<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/PlannerActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    tools:context=".Planner">

    <TextView
        android:id="@+id/guest"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="84dp"
        android:text="@string/guest"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/budget" />

    <TextView
        android:id="@+id/budget"
        android:layout_width="91dp"
        android:layout_height="25dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/budget"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theme" />

    <TextView
        android:id="@+id/theme"
        android:layout_width="91dp"
        android:layout_height="25dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/theme"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time" />

    <TextView
        android:id="@+id/time"
        android:layout_width="91dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="84dp"
        android:text="@string/time"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:hint="11:00"
        android:inputType="time"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/time"
        app:layout_constraintTop_toTopOf="@+id/time"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/editTextTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:hint="Birthday"
        android:inputType="textShortMessage|textEmailAddress"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/theme"
        app:layout_constraintTop_toTopOf="@+id/theme"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/editTextBudget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:hint="250.00"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/budget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/budget"
        app:layout_constraintTop_toTopOf="@+id/budget" />

    <NumberPicker
        android:id="@+id/numberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_guestNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toEndOf="@+id/tv_guestNumber"
        app:layout_constraintTop_toTopOf="@+id/tv_guestNumber"
        app:layout_constraintVertical_bias="0.235" />

    <TextView
        android:id="@+id/tv_guestNumber"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:layout_marginStart="44dp"
        android:hint="0"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/guest"
        app:layout_constraintStart_toEndOf="@+id/guest"
        app:layout_constraintTop_toTopOf="@+id/guest"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_guestNumber"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>